2009-07-02  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-columnsDisplayOrder]): added the size column to the default columns.

2009-07-02  Cyril Robert <crobert@inverse.ca>

	* UI/MailerUI/UIxMailFolderActions.m: Added auto-subscribe on imap folder
	creation.

2009-07-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-lookupName:inContext:acquire:): handle "AsTask" and
	"AsAppointment" url suffix only for the default "so" handler.

2009-07-01  Cyril Robert <crobert@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m: Remove color from user settings on
	unsubscribe.
	* SoObjects/SOGo/SOGoGCSFolder.m: Re-fixed to also remove from InactiveFolders
	and FolderSyncTags.
	* UI/MailerUI/UIxMailFolderActions.m (_trashedURLOfFolder:withCO:): Fixed
	issue when deleting a folder with the same name as one already in the Trash.

2009-06-30  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -addToCalendarAction]): new method to add
	a calendar from an invitation (used to work?!).

	* SoObjects/SOGo/NSString+Utilities.m ([NSString
	-_handleURLs:textToMatch:prefix:inRanges:]): fixed offset
	of range after replacement.

	* SoObjects/SOGo/NSArray+Utilities.m ([NSArray
	-hasRangeIntersection:]): fixed error in range comparison.

2009-06-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-davCalendarMultiget, -davCalendarQuery): certain dav attribute
	methods do not necessitate additional fields, we declare their
	corresponding fields to "". Also, we make sure those fake fields
	are not specified in the SQL query and we ensure all the fields
	are only requested once each.
	(-davCalendarComponentSet): we need to retain the returned
	array to avoid a crash during the next access to the attribute.

2009-06-30  Cyril Robert <crobert@inverse.ca>
