@@ -1,3 +1,9 @@
+2009-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/SOGo/LDAPUserManager.m (_fillContactMailRecords:): if
+	the user uid contains a "@", we set it directly as system email
+	rather than suffixing it with the default mail domain.
+
 2009-07-02  Francis Lachapelle  <flachapelle@inverse.ca>
 
 	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
